docs/style.css
/* Set variables */
:root {
  --main-black: hsla(0, 0%, 0%, 1);
  --main-white: hsla(0, 100%, 100%, 1);
  --main-purple: hsla(280, 80%, 45%, 1);
}

html {
  font-size: 10px;
  font-family: 'Fira Code', "Lucida Console", Monaco, monospace;
}

/* Heading styles */
h1, h2, h3, h4, h5, h6 {
  font-family: 'MADE Evolve Sans EVO', "Trebuchet MS", Helvetica, sans-serif
}

h1 {
  font-size: 5rem;
}

h2 {
  font-size: 3.5rem;
}

h3  {
  font-size: 2.8rem;
}
h4 {
  font-size: 2.2rem;
}

ul {
  margin: 0;
  padding: 0;
}

li {
  margin: 0 1rem 0 1rem;
}

a {
  text-decoration: none;
  color: var(--main-black);
}

p {
  font-family: 'Fira Code', "Lucida Console", Monaco, monospace;
  text-align: center;
  font-size: 2rem;
  font-weight: retina;
}

/* FRONT PAGE STYLES */
.page-section {
  min-width: 100vw;
  min-height: 20vh;
}

 /* MAIN PAGE HEADER SECTION*/
#front-page-heading {
  text-transform: uppercase;
  text-align: center;
}

#header-section {
  display: flex;
  flex-direction: column;
  align-items: center;
}

  /* Navbar */
.horizontal-nav-bar {
  display: flex;
  justify-content: center;
}

.horizontal-nav-items {
  display: flex;
  list-style-type: none;
}

.nav-item a {
  display: block;
  text-transform: lowercase;
  font-size: 1.5rem;
  transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
}

.nav-item a:hover {
  color: var(--main-purple);
  transform: scale(1.05);
}

/* Portfolio intro section */
#portfolio-link-section {
  display: grid;
  grid-auto-rows: minmax(100px, 1fr);
  grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
  height: auto;
}

.link-container {
  height: 20rem;
  min-width: 20rem;
  max-width: 30rem;
  text-align: center;
}



.link-title-block h3 {
  padding: .5rem 0 .5rem 0;
  border-bottom: 1px solid black;
  margin: 0;

}

.link-item-container {
  display: grid;
  grid-template-rows: repeat(2, 1fr);
  grid-template-columns: repeat(3, 1fr);
  grid-template-areas: 
  "portfolio . skills"
  " ......  hire ...";
  justify-content: center;
}

#dev-link-container {
  grid-column: 2;
  grid-row: 1;

  margin-top: 5rem;

}

.link-block {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
  padding-top: 2rem;

  background: hsla(0, 0%, 0%, 0.2);
}

.link-block-1 {
  grid-area: portfolio;
  border-left: 1px solid black;
}

.link-block-2 {
  grid-area: skills;
  border-right: 1px solid black;
}

.link-block-3 {
  grid-area: hire;
  border-top: 1px solid black;
}

.portfolio-link {
  display: block;
}

/* PORTFOLIO SECTION */

.portfolio-page-section {
  display: flex;
  
}

.page-section-sidebar {
  display: flex;
  flex-direction: column;

  min-width: 15rem;

  background-color: hsla(0, 0%, 0%, 0.2);
}

.page-section-sidebar h2 {
  font-size: 2rem;
  text-align: center;
}

.sidebar-nav {
  display: flex;
  flex-direction: column;
}

.section-content-container {
  flex-basis: auto;
  flex-grow: 1;

  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-wrap: wrap;

  background-color: hsla(280, 80%, 45%, 1);
}

.section-content-container h2 {
  text-align: center;
}

.portfolio-item {
  flex-basis: auto;
  flex-grow: auto;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  min-width: 150px;
  min-height: 150px;

  margin: 5px;
  background-color: var(--main-white);
}

